# Azure-API-Wrapper-SDK--azw-

./: .gitignore  README.md  pyproject.toml
azw/: __init__.py  azapi.py  test.py
azw.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
