[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azw"
version = "0.1.2"
authors = [
    { name="Peter Karacsonyi", email="peter.karacsonyi85@gmail.com" },
]
description = "Azure API Wrapper"
requires-python = ">=3.7"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]

[tool.setuptools.packages]
find = {}
